<resources>
    <string name="app_name">SharingJob_v0.1</string>

<string name="title_section0">Inicio</string>
<string name="title_section1">Mi cuenta</string>
<string name="title_section2">Nuevo empleo</string>
<string name="title_section3">Configuración</string>

<string name="navigation_drawer_open">Open navigation drawer</string>
<string name="navigation_drawer_close">Close navigation drawer</string>

    <!--<string name="action_example">Example action</string>
        <string name="action_settings">Settings</string> -->

    <!-- TODO: Remove or change this placeholder text -->
<string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tiene_cuenta">Tienes Cuenta</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="cancelar">Cancelar</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="logout">Salir</string>
    <string name="completar">Completar</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="ingresar_credenciales">Ingrese sus Credenciales</string>
    <string name="selecione_categoria">Seleccione una Categoría</string>
    <string name="titulo_nuevo_empleo">Ingrese los datos para crear un nuevo empleo:</string>
    <string name="crear">Crear</string>
    <string name="titulo">Título</string>
    <string name="descripcion">Descripción</string>
    <string name="propuesta_salarial">Propuesta Salarial</string>
    <string name="registrar">Registrar</string>
    <string name="mis_datos">Mis datos</string>
    <string name="cuenta_correo">Correo:</string>
    <string name="cuenta_nombres">Nombres:</string>
    <string name="cuenta_apellidos">Apellidos:</string>
    <string name="cuenta_mi_empresa">Mi empresa</string>
    <string name="cuenta_agregar_estudio">Agregar estudio realizado</string>
    <string name="cuenta_agregar_trabajo" >Agregar trabajo realizado</string>
    <string name="ingrese_los_datos">Ingrese los datos solicitados:</string>
    <string name="estudios_realizados">Estudios realizados</string>
    <string name="empleos_tomados">Empleos tomados</string>
    <string name="empleos_publicados">Empleos publicados</string>
    <string name="perfil_completo">Perfil completo</string>
    <string name="agregar_empresa">AGREGAR EMPRESA</string>
    <string name="registrar_empresa">REGISTRAR EMPRESA</string>
    <string name="editar">Editar</string>
    <string name="no_recidencia">No. Recidencia</string>
    <string name="calle">Calle</string>
    <string name="avenida">Avenida</string>
    <string name="calzada">Calzada</string>
    <string name="zona">Zona</string>
    <string name="municipio">Municipio</string>
    <string name="categoria">Categoría</string>
    <string name="guardar">Guardar</string>
    <string name="agregar">Agregar</string>
    <string name="titulo_add_estudio_realizado">Ingrese los datos para agregar un estudio:</string>
    <string name="grado">Grado</string>
    <string name="observacion">Observación</string>
    <string name="titulo_add_empleo_realizado">Ingrese los datos para agregar un empleo realizado:</string>
    <string name="puesto">Puesto</string>
    <string name="nombre_empresa">Nombre empresa</string>
    <string name="nombre_proyecto">Nombre_proyecto</string>
    <string name="temporal">Temporal</string>
    <string name="fecha_inicio">Fecha inicio</string>
    <string name="fecha_fin">Fecha fin</string>
    <string name="set">Set</string>
    <string name="titulo_add_empresa">Datos de su empresa:</string>
    <string name="nombre">Nombre</string>
    <string name="sitio_web">Sitio web</string>
    <string name="correo_contacto">Correo contacto</string>
    <string name="telefono">Telefono</string>
    <string name="mision">Misión</string>
    <string name="vision">Visión</string>
    <string name="titulo_empleos_tomados">Se muestran los empleos tomados:</string>
    <string name="agregar_empleo_realizado">Agregar empleo realizado</string>
    <string name="titulo_estudios_realizados">Se muestran los estudios realizados:</string>
    <string name="agregar_estudio_realizado">Agregar estudio realizado</string>
    <string name="recargar">Recargar</string>
    <string name="resultados">Resultados</string>
    <string name="detalle_empleo">Detalle del empleo</string>
    <string name="aplicar">Aplicar</string>
</resources>
