<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/button_blue">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        style="@style/estilo_layout_fondo">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView5"
            style="@style/estilo_scrollview">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:weightSum="1" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/titulo_add_empresa"
                    android:id="@+id/textView13"
                    android:textColor="#ff000000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:paddingBottom="5dp"
                    android:layout_marginBottom="10dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#ffffffff"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="10dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/addEmpresa_et_nombre"
                    android:layout_marginRight="35dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/nombre"
                    android:background="@drawable/redondeado_edit_text"
                    android:padding="5dp"
                    android:textSize="16sp"
                    android:singleLine="true"
                    android:inputType="textPersonName" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/addEmpresa_et_web"
                    android:layout_marginRight="35dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/sitio_web"
                    android:background="@drawable/redondeado_edit_text"
                    android:padding="5dp"
                    android:textSize="16sp"
                    android:singleLine="true" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/addEmpresa_et_correo"
                    android:layout_marginRight="35dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/correo_contacto"
                    android:background="@drawable/redondeado_edit_text"
                    android:padding="5dp"
                    android:textSize="16sp"
                    android:singleLine="true"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/addEmpresa_et_telefono"
                    android:layout_marginRight="35dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/telefono"
                    android:background="@drawable/redondeado_edit_text"
                    android:padding="5dp"
                    android:textSize="16sp"
                    android:singleLine="true"
                    android:inputType="phone" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:id="@+id/addEmpresa_et_mision"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/mision"
                    android:background="@drawable/redondeado_edit_text"
                    android:padding="5dp"
                    android:textSize="14sp"
                    android:gravity="top"
                    android:inputType="textMultiLine" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:id="@+id/addEmpresa_et_vision"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/vision"
                    android:background="@drawable/redondeado_edit_text"
                    android:padding="5dp"
                    android:textSize="14sp"
                    android:gravity="top"
                    android:inputType="textMultiLine" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#ffffffff"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="10dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center_horizontal" >

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/agregar"
                        android:id="@+id/button"
                        android:background="@drawable/button_green"
                        android:textColor="@drawable/button_text_color"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:singleLine="false"
                        android:layout_marginBottom="5dp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cancelar"
                        android:id="@+id/button2"
                        android:background="@drawable/button_red"
                        android:textColor="@drawable/button_text_color"
                        android:layout_marginRight="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:elegantTextHeight="false"
                        android:singleLine="false"
                        android:layout_marginBottom="5dp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>
