<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/button_blue">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        style="@style/estilo_layout_fondo">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView12"
            style="@style/estilo_scrollview">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:weightSum="1" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/ingrese_los_datos"
                    android:id="@+id/textView9"
                    android:gravity="left"
                    android:textSize="16sp"
                    android:layout_gravity="left"
                    android:textStyle="bold"
                    android:textColor="#ff000000"
                    android:layout_marginBottom="10dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#ffffffff"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="10dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/dir_et_no"
                    android:hint="@string/no_recidencia"
                    android:background="@drawable/redondeado_edit_text"
                    android:padding="5dp"
                    android:inputType="text"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/dir_et_calle"
                    android:layout_weight="1"
                    android:hint="@string/calle"
                    android:inputType="text"
                    android:padding="5dp"
                    android:background="@drawable/redondeado_edit_text"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/dir_et_avenida"
                    android:layout_weight="1"
                    android:hint="@string/avenida"
                    android:inputType="textPersonName|text"
                    android:padding="5dp"
                    android:background="@drawable/redondeado_edit_text"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/dir_et_calzada"
                    android:layout_weight="1"
                    android:hint="@string/calzada"
                    android:inputType="textPersonName|text"
                    android:padding="5dp"
                    android:background="@drawable/redondeado_edit_text"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/dir_et_zona"
                    android:layout_weight="1"
                    android:hint="@string/zona"
                    android:padding="5dp"
                    android:background="@drawable/redondeado_edit_text"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:inputType="number" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/dir_et_municipio"
                    android:layout_weight="1"
                    android:hint="@string/municipio"
                    android:inputType="textPersonName|text"
                    android:padding="5dp"
                    android:background="@drawable/redondeado_edit_text"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:ellipsize="end" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center|center_horizontal"
                    android:background="#ffe7ffde"
                    android:padding="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/categoria"
                        android:id="@+id/textView11"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:textColor="#ff000000" />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/dir_sp_deptos"
                        android:background="@drawable/redondeado_edit_text" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/guardar"
                        android:id="@+id/dir_bt_guardar"
                        android:background="@drawable/button_green"
                        android:textColor="@drawable/button_text_color"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:singleLine="false"
                        android:layout_marginBottom="5dp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cancelar"
                        android:id="@+id/dir_bt_cancelar"
                        android:background="@drawable/button_red"
                        android:textColor="@drawable/button_text_color"
                        android:layout_marginRight="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:elegantTextHeight="false"
                        android:singleLine="false"
                        android:layout_marginBottom="5dp" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>
