<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.example.jcaal.sharingjob_v01.registro"
    android:background="#ffc4acff">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#c8000000"
        android:layout_margin="5dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#f0ffffff"
            android:layout_margin="1dp">

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/scrollView3"
                android:layout_margin="10dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/crear_cuenta"
                        android:id="@+id/textView5"
                        android:gravity="left"
                        android:textSize="16sp"
                        android:layout_gravity="left" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:id="@+id/reg_et_email"
                        android:layout_gravity="right"
                        android:hint="@string/email"
                        android:layout_marginLeft="35dp"
                        android:layout_marginRight="35dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:background="#ffe4e4e4"
                        android:padding="8dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/reg_et_pass"
                        android:layout_gravity="right"
                        android:hint="@string/password"
                        android:layout_marginLeft="35dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="35dp"
                        android:layout_marginBottom="10dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/reg_et_nombres"
                        android:layout_gravity="right"
                        android:hint="@string/nombres"
                        android:layout_marginLeft="35dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="35dp"
                        android:layout_marginBottom="10dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/reg_et_apellidos"
                        android:layout_gravity="right"
                        android:hint="@string/apellidos"
                        android:layout_marginLeft="35dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="35dp"
                        android:layout_marginBottom="10dp" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center" >

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/registrar"
                            android:id="@+id/reg_bt_registrar"
                            android:layout_weight="1"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="10dp"
                            android:background="@color/color_btn_aceptar"
                            android:singleLine="true"
                            android:textColor="@drawable/button_text_color" />

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/cancelar"
                            android:id="@+id/reg_bt_cancelar"
                            android:layout_weight="1"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="5dp"
                            android:background="@color/color_btn_cancelar"
                            android:singleLine="true"
                            android:textColor="@drawable/button_text_color" />
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>
