<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.example.jcaal.sharingjob_v01.gui.login"
    android:background="#ff81afff">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="5dp"
        android:background="#ff000000"
        android:alpha="0.9" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="1dp"
            android:background="#ffffffff" >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/scrollView2"
                android:layout_margin="10dp" >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/textView"
                        android:textColor="#ff000000"
                        android:textSize="16sp"
                        android:singleLine="true"
                        android:text="@string/ingresar_credenciales" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:id="@+id/lo_et_email"
                        android:layout_marginTop="20dp"
                        android:autoText="false"
                        android:hint="@string/email"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="35dp"
                        android:layout_marginRight="35dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/lo_et_pass"
                        android:hint="@string/password"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="35dp"
                        android:layout_marginRight="35dp" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center">

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/ingresar"
                            android:id="@+id/lo_bt_ingreso"
                            android:layout_weight="1"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@color/color_btn_aceptar"
                            android:singleLine="true"
                            android:textColor="@drawable/button_text_color" />

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/cancelar"
                            android:id="@+id/lo_bt_cancelar"
                            android:layout_weight="1"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="5dp"
                            android:background="@color/color_btn_cancelar"
                            android:singleLine="true"
                            android:textColor="@drawable/button_text_color" />

                    </LinearLayout>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/crear_cuenta"
                        android:id="@+id/lo_bt_crear"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/color_btn_otro"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="50dp"
                        android:singleLine="true"
                        android:textColor="@drawable/button_text_color" />

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
